[package]
name = "fluxo"
version = "0.1.0"
edition = "2021"
description = "a general-purpose neural interface"
authors = ["Anu Sharma <anu@fluxo.dev>", "Ramnath R Iyer <rri@fluxo.dev>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/fluxo-dev/app"
categories = ["compilers"]
keywords = ["compilers"]

[dependencies]
