[package]
name = "fluxo"
version = "0.1.0"
edition = "2021"
description = "toolkit for building and launching apps"
authors = ["Anu Sharma <anu@fluxo.dev>", "Ramnath R Iyer <rri@fluxo.dev>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/fluxo-dev/fluxo"
categories = ["compilers"]
keywords = ["compilers"]
build = "build.rs"

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
lalrpop-util = { version = "0.20.0", features = ["lexer", "regex", "unicode"] }
logos = "0.13.0"
